[package]
name = "scuttleboi"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
parking_lot = "0.11"
pea2pea = "0.16"
private-box = "0.6"
serde = "1"
serde_json = "1"
ssb-boxstream = "0.2"
ssb-crypto = "0.2"
ssb-handshake = "0.5"
ssb-keyfile = "0.5"
tokio = "1"
tokio-util = { version = "0.6", features = ["compat"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.2", features = ["ansi", "chrono", "env-filter", "fmt", "parking_lot", "smallvec"] }
